--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Trabalho PRW 2° Bimestre</title>
+    <link rel="stylesheet" href="style/style_header.css">
 </head>
 <body>
-    
+    <header>
+        <div id="title">
+            <h1 class="title-h1">Fluxo </h1>
+            <h1>Caixa</h1>
+        </div>
+            <ul>
+            <a href="pages/Listar1.php" id="inscreva-se-btn"><li>Tabela Caixa</li></a>
+            <a href="pages/Cadastro1.html" id="inscreva-se-btn"><li>Cadastro de Caixa</li></a>
+            <a href="pages/Consulta.php" id="inscreva-se-btn"><li>Consulta de Caixa</li></a>
+            </ul>
 </body>
 </html>
